# GameEngine

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt  unixCompile.sh
Client/: CMakeLists.txt
Client/inc/: clientLobby.hpp  gameClient.hpp  gameMenu.hpp  levelEditor.hpp  pongClient.hpp  textBox.hpp
Client/sprites/json/: boss.json  enemyBullet.json  enemyMecha.json  enemySimple.json  explosion.json  player1.json  player2.json  player3.json  player4.json  player5.json
Client/src/: clientLobby.cpp  clientLobbyHandler.cpp  clientLobbyPlayer.cpp  gameClient.cpp  gameMenu.cpp  levelEditor.cpp  main.cpp  pongClient.cpp  textBox.cpp
Common/inc/: api.hpp  componentCustom.hpp  init.hpp  systemCustom.hpp
Common/inc/Pong/: componentCustom.hpp  entityCreation.hpp  systemCustom.hpp
Common/scripts/: enemySimple.lua
Common/src/: api.cpp  init.cpp  systemCustom.cpp
Common/src/Pong/: entityCreation.cpp  systemCustom.cpp
GameEngine/: CMakeLists.txt
GameEngine/inc/: event.hpp  exception.hpp  gameEngine.hpp
GameEngine/inc/AssetManager/: AssetManager.hpp
GameEngine/inc/Base/: Angle.hpp  Color.hpp  Rect.hpp  Vector2.hpp  Vector3.hpp
GameEngine/inc/Debug/: getFullType.hpp
GameEngine/inc/ECS/: components.hpp  entity.hpp  registry.hpp  sparseArray.hpp  systems.hpp
GameEngine/inc/JsonManager/: JsonManager.hpp
GameEngine/inc/LuaManager/: LuaManager.hpp
GameEngine/inc/Network/: common.hpp  connection.hpp  msg.hpp  network.hpp  protocol.hpp  queue.hpp  udp_msg.hpp  udp_transfer.hpp
GameEngine/inc/TimeManager/: TimeManager.hpp
GameEngine/inc/Window/: Clock.hpp  Config.hpp  Font.hpp  GraphicLib.hpp  Keyboard.hpp  Listener.hpp  Mouse.hpp  Music.hpp  RectangleShape.hpp  RenderWindow.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Time.hpp  View.hpp
GameEngine/src/: test.cpp
GameEngine/src/ECS/: systems.cpp
GameEngine/src/JsonManager/: JsonManager.cpp
GameEngine/src/LuaManager/: LuaGetValue.cpp  LuaPushValue.cpp  LuaUtils.cpp
GameEngine/src/Network/: Network.cpp
GameEngine/src/TimeManager/: TimeManager.cpp
GameEngine/src/Window/: Keyboard.cpp  Mouse.cpp  RenderWindow.cpp
Server/: CMakeLists.txt
Server/inc/: gameServer.hpp  lobby.hpp  pongServer.hpp  pongServerSystem.hpp  serverInstance.hpp  systemServer.hpp
Server/levels/: level1.txt
Server/src/: gameServer.cpp  lobby.cpp  lobbyHandler.cpp  main.cpp  pongServer.cpp  pongServerSystem.cpp  serverInstance.cpp  systemServer.cpp
testingFile/: test.json  test.lua
